--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">汽车助手</string>
 
+    <string name="add.consumer.title">添加消费信息</string>
+
     <string name="consumer.money">消费金额(元)</string>
     <string name="consumer.money.hint">请输入消费金额</string>
     <string name="consumer.unit.price">单价(元/升)</string>
