--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="add">添加</string>
     <string name="modify">修改</string>
+    <string name="no.data.hint">暂无数据!</string>
     <string name="add.consumer.title">添加消费信息</string>
     <string name="add.consumer.success">添加成功</string>
     <string name="add.consumer.fail">添加失败</string>
