--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,11 +39,19 @@
     <string name="chart.fuel.title">油耗曲线图</string>
     <string name="chart.fuel.min.lable">最低油耗</string>
     <string name="chart.fuel.max.lable">最高油耗</string>
+    <string name="chart.save">保存图表</string>
+    <string name="chart.save.success">图表保存成功</string>
+    <string name="chart.save.fail">图表保存失败</string>
 
     <string name="about.update">检查更新</string>
     <string name="about.feedback">问题反馈</string>
     <string name="about.author">联系作者</string>
+    <string name="about.share">应用分享</string>
     <string name="about.thanks">感恩鸣谢</string>
+
+    <string name="share.title">应用分享</string>
+    <string name="share.subject">汽车助手</string>
+    <string name="share.content">汽车助手,您的生活好帮手。下载地址：https://www.pgyer.com/classic_car</string>
 
     <string name="about.version">v %s</string>
     <string name="author.qq">QQ:630404403</string>
@@ -58,6 +66,7 @@
         Butterknife \n
         SublimePicker \n
         MPAndroidChart \n
+        CircleImageView \n
         MaterialDialog \n
         MaterialSpinner \n
         MaterialEditText \n
