--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
         感谢以下开源库和作者，排名不分先后：\n
         RxJava \n
         RxAndroid \n
+        RxBinding \n
         RxPermissions \n
         Sqlbrite \n
         Dagger2 \n
