Update licenses activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,9 @@
     <string name="about.feedback">问题反馈</string>
     <string name="about.author">联系作者</string>
     <string name="about.share">应用分享</string>
-    <string name="about.thanks">感恩鸣谢</string>
+    <string name="about.thanks">Open source licenses</string>
+    <string name="about.backup">备份数据</string>
+    <string name="about.restore">恢复数据</string>
     <string name="storage.permissions.describe">应用需要访问你的存储空间,进行日志存储</string>
     <string name="feedback.permissions.describe">问题反馈支持语音反馈，是否允许语音录制</string>
 
@@ -60,25 +62,4 @@
     <string name="about.version">v %s</string>
     <string name="author.qq">QQ:630404403</string>
     <string name="author.wx">微信:630404403</string>
-    <string name="opensource.detail">
-        感谢以下开源库和作者，排名不分先后：\n
-        RxJava \n
-        RxAndroid \n
-        RxBinding \n
-        Sqlbrite \n
-        Logger \n
-        Dagger2 \n
-        BottomBar \n
-        LeakCanary \n
-        BlockCanary \n
-        Butterknife \n
-        SublimePicker \n
-        MPAndroidChart \n
-        EasyPermissions \n
-        CircleImageView \n
-        MaterialDialog \n
-        MaterialSpinner \n
-        MaterialEditText \n
-        FloatingActionButton \n
-    </string>
 </resources>
